--- a/study/src/main/resources/application.properties
+++ b/study/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sumin?allowMultiQueries=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=940201
+
+# oauth server
+security.oauth2.client.id=sumin
+security.oauth2.client.client-secret=secret
+security.oauth2.client.access-token-uri=http://localhost:8082/studyoauthserver/oauth/token
+security.oauth2.client.user-authorization-uri=http://localhost:8082/studyoauthserver/oauth/authorize
+
+
+
+
+server.tomcat.additional-tld-skip-patterns=*.jar
