인증서버에서 token 발급받기 ( jwt ) + retrofit

--- a/study/bin/main/application.properties
+++ b/study/bin/main/application.properties
@@ -13,6 +13,13 @@ security.oauth2.client.access-token-uri=http://localhost:8082/studyoauthserver/o
 security.oauth2.client.user-authorization-uri=http://localhost:8082/studyoauthserver/oauth/authorize
 
 
+# oauth param
+config.oauth2.grant-type=authorization_code
+config.oauth2.oauth-base-uri=http://localhost:8082/
+config.oauth2.redirect-uri=http://localhost:8081/study/client/callback
+config.oauth2.scope=read write
 
+# resource param
+config.oauth2.resource-base-uri=http://localhost:8083/
 
-server.tomcat.additional-tld-skip-patterns=*.jar
+#server.tomcat.additional-tld-skip-patterns=*.jar
